<resources>
    <string name="app_name">Biu去水印</string>
    <string name="edit_phone_num">请输入手机号码</string>
    <string name="edit_phone_oldpassword">请输入当前密码</string>
    <string name="edit_phone_invite">请输入邀请码（选填）</string>
    <string name="edit_phone_password">请输入密码</string>
    <string name="edit_phone_verify">请输入验证码</string>
    <string name="login_rember_password">  记住密码</string>
    <string name="login_forger">忘记密码</string>
    <string name="login_btn_login">登录</string>
    <string name="login_btn_register">注册</string>
    <string name="register_getverify">获取验证码</string>
    <string name="register_text_agree">我同意</string>
    <string name="register_text_agreement">《用户协议》</string>
    <string name="register_btn_register">立即注册</string>
    <string name="forget_btn_confirm">确认</string>
    <string name="forget_edit_hint_password">请输入新密码</string>
    <string name="forget_edit_hint_repassword">请再次输入新密码</string>
    <string name="forget_title">忘记密码</string>
    <string name="main_title">首页</string>
    <string name="mine_title">我的</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="main_edit_hint">将视频链接粘贴在此处</string>
    <string name="main_btn_analysis">解析</string>
    <string name="main_text_how">如何获取视频链接</string>
    <string name="main_text_support">支持平台</string>
    <string name="main_text_ask_title">常见问题答疑</string>
    <string name="main_text_save">保存到本地</string>
    <string name="main_text_explain">视频归平台及作者所有，本应用不储存任何视频或图片</string>
    <string name="user_text_login">点击登录</string>
    <string name="user_text_recharge">我要充值</string>
    <string name="user_text_share">邀请有礼</string>
    <string name="user_text_safety">账号安全</string>
    <string name="user_text_feedback">意见反馈</string>
    <string name="user_text_setting">设置</string>
    <string name="error_gif">长宽不小于 %1$dpx，且大小不超过 %2$sM。</string>
    <string name="text_view_limit_int_idcard">1234567890Xx</string>

    <!--  translatable|false 就是代表不管系统是什么语言，都直接显示标签内容 本项目为了去除报红而添加 start -->
    <string name="mod_tip01" translatable="false">拖拉下方白色分割线选择封面</string>
    <string name="mod_tip02" translatable="false">没有合适的?</string>
    <string name="mod_tip03" translatable="false">从相册中选择</string>
    <string name="mod_tip04" translatable="false">并没有进行操作更改</string>
    <string name="str_buy_vip_menber">开通VIP会员</string>
    <!--  translatable|false 就是代表不管系统是什么语言，都直接显示标签内容 本项目为了去除报红而添加 end -->
</resources>
