<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context="com.manyu.videoshare.ui.account.ForgetPasswordActivity">
    <include layout="@layout/include_app_title" />
    <LinearLayout
        android:layout_marginTop="57dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:lines="1"
            android:textSize="@dimen/edit_size"
            android:inputType="phone"
            android:id="@+id/forger_edit_phone"
            android:layout_marginBottom="5dp"
            android:background="@drawable/edit_null"
            android:textColorHint="@color/hint_color"
            android:hint="@string/edit_phone_num"
            />
        <include layout="@layout/include_line_a"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:maxLines="1"
                android:lines="1"
                android:textSize="@dimen/edit_size"
                android:inputType="number"
                android:id="@+id/forger_edit_verify"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/edit_null"
                android:textColorHint="@color/hint_color"
                android:hint="@string/edit_phone_verify"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginBottom="3dp"
                android:textColor="@color/login_blue"
                android:textSize="14sp"
                android:id="@+id/forger_btn_getverify"
                android:text="@string/register_getverify"/>
        </LinearLayout>
        <include layout="@layout/include_line_a"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:lines="1"
            android:textSize="@dimen/edit_size"
            android:layout_marginTop="20dp"
            android:id="@+id/forger_edit_password"
            android:layout_marginBottom="5dp"
            android:background="@drawable/edit_null"
            android:textColorHint="@color/hint_color"
            android:hint="@string/forget_edit_hint_password"
            android:inputType="textPassword"
            />
        <include layout="@layout/include_line_a"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:lines="1"
            android:textSize="@dimen/edit_size"
            android:inputType="textPassword"
            android:layout_marginTop="20dp"
            android:id="@+id/forget_edit_repassword"
            android:layout_marginBottom="5dp"
            android:background="@drawable/edit_null"
            android:textColorHint="@color/hint_color"
            android:hint="@string/forget_edit_hint_repassword"
            />
        <include layout="@layout/include_line_a"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_blue"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:layout_marginTop="32dp"
            android:id="@+id/forger_btn_confirm"
            android:text="@string/forget_btn_confirm"/>
    </LinearLayout>
</LinearLayout>
