<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context="com.manyu.videoshare.ui.account.RegisterActivity">
    <include layout="@layout/include_app_title" />
    <LinearLayout
        android:layout_marginTop="57dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:lines="1"
            android:textSize="@dimen/edit_size"
            android:inputType="phone"
            android:id="@+id/register_edit_phone"
            android:layout_marginBottom="5dp"
            android:background="@drawable/edit_null"
            android:textColorHint="@color/hint_color"
            android:hint="@string/edit_phone_num"
            android:text=""
            />
        <include layout="@layout/include_line_a"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxLines="1"
            android:lines="1"
            android:inputType="number"
            android:textSize="@dimen/edit_size"
            android:id="@+id/register_edit_verify"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/edit_null"
            android:textColorHint="@color/hint_color"
            android:hint="@string/edit_phone_verify"
            />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginBottom="3dp"
                android:textColor="@color/login_blue"
                android:textSize="14sp"
                android:id="@+id/register_btn_getverify"
                android:text="@string/register_getverify"/>
        </LinearLayout>
        <include layout="@layout/include_line_a"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:textSize="@dimen/edit_size"
            android:lines="1"
            android:inputType="textPassword"
            android:layout_marginTop="20dp"
            android:id="@+id/register_edit_password"
            android:layout_marginBottom="5dp"
            android:background="@drawable/edit_null"
            android:textColorHint="@color/hint_color"
            android:hint="@string/edit_phone_password"
            />
        <include layout="@layout/include_line_a"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:textSize="@dimen/edit_size"
            android:lines="1"
            android:layout_marginTop="20dp"
            android:id="@+id/register_edit_invite"
            android:layout_marginBottom="5dp"
            android:background="@drawable/edit_null"
            android:textColorHint="@color/hint_color"
            android:hint="@string/edit_phone_invite"
            />
        <include layout="@layout/include_line_a"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="38dp"
            android:gravity="center_vertical"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">
            <CheckBox
                android:id="@+id/register_checkbox"
                android:layout_width="wrap_content"
                android:checked="true"
                android:layout_height="wrap_content"
                android:button="@drawable/checkbox"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:layout_marginLeft="5dp"
                android:text="@string/register_text_agree"/>
            <TextView
                android:id="@+id/register_btn_agreement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="@color/login_blue"
                android:text="@string/register_text_agreement"/>
        </LinearLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_blue"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:layout_marginTop="18dp"
            android:id="@+id/register_btn_register"
            android:text="@string/register_btn_register"/>
        <View
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="注册即代表您同意"/>
            <TextView
                android:id="@+id/user_agreement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="@color/login_blue"
                android:paddingTop="6dp"
                android:paddingBottom="6dp"
                android:text="《用户协议》、"/>
            <TextView
                android:id="@+id/privacy_policy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:paddingTop="6dp"
                android:paddingBottom="6dp"
                android:textColor="@color/login_blue"
                android:text="《隐私政策》,"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:gravity="center"
            android:layout_marginBottom="23dp"
            android:text="接受免除或者限制责任、诉讼管辖约定等粗体标示条款"/>
    </LinearLayout>
</LinearLayout>
