<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">
    <include layout="@layout/include_app_title" />
    <LinearLayout
        android:layout_marginTop="57dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:lines="1"
            android:inputType="phone"
            android:id="@+id/login_edit_phone"
            android:layout_marginBottom="5dp"
            android:background="@drawable/edit_null"
            android:textColorHint="@color/hint_color"
            android:textSize="@dimen/edit_size"
            android:hint="@string/edit_phone_num"
            />
        <include layout="@layout/include_line_a"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:lines="1"
            android:inputType="textPassword"
            android:id="@+id/login_edit_pass"
            android:layout_marginTop="20dp"
            android:textSize="@dimen/edit_size"
            android:layout_marginBottom="5dp"
            android:background="@drawable/edit_null"
            android:textColorHint="@color/hint_color"
            android:hint="@string/edit_phone_password"
            />
        <include layout="@layout/include_line_a"/>
        <LinearLayout
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <CheckBox
                android:id="@+id/login_checkbox"
                android:checked="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/checkbox"
                 />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/check_box_text"
                android:textSize="14sp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp"
                android:text="@string/login_rember_password"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/login_foget"
                android:textSize="14sp"
                android:gravity="right"
                android:id="@+id/login_btn_forget"
                android:text="@string/login_forger"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="35dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_white"
                android:textColor="@color/login_blue"
                android:textSize="18sp"
                android:id="@+id/login_btn_register"
                android:text="@string/login_btn_register"/>
            <Button
                android:layout_marginLeft="17dp"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_blue"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:id="@+id/login_btn_login"
                android:text="@string/login_btn_login"/>
        </LinearLayout>
        <View
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="登录即代表您同意"/>
            <TextView
                android:id="@+id/user_agreement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="@color/login_blue"
                android:paddingTop="6dp"
                android:paddingBottom="6dp"
                android:text="《用户协议》、"/>
            <TextView
                android:id="@+id/privacy_policy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:paddingTop="6dp"
                android:paddingBottom="6dp"
                android:textColor="@color/login_blue"
                android:text="《隐私政策》,"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:gravity="center"
            android:layout_marginBottom="23dp"
            android:text="接受免除或者限制责任、诉讼管辖约定等粗体标示条款"/>
    </LinearLayout>
</LinearLayout>
